# multiRobots-lab

./: .gitignore  README.md
src/: Gazebo多机仿真平台使用手册.txt
src/gazebo_swarm_robot_pkgs/gazebo_swarm_robot_tb3/: CMakeLists.txt  package.xml
src/gazebo_swarm_robot_pkgs/gazebo_swarm_robot_tb3/include/: swarm_robot_control.h
src/gazebo_swarm_robot_pkgs/gazebo_swarm_robot_tb3/launch/: gazebo_swarm_robot_5.launch  gazebo_swarm_robot_6.launch  gazebo_swarm_robot_8.launch
src/gazebo_swarm_robot_pkgs/gazebo_swarm_robot_tb3/models/turtlebot3_world_my/: ReadMe.txt  model-1_4.sdf  model-1_4_backup.sdf  model.sdf  model_backup.sdf
src/gazebo_swarm_robot_pkgs/gazebo_swarm_robot_tb3/models/turtlebot3_world_my/meshes/: env_01.STL  env_0101.dae
src/gazebo_swarm_robot_pkgs/gazebo_swarm_robot_tb3/src/: log.txt  main_angle.cpp  main_gruppe.cpp  main_gruppe_6.cpp  main_gruppe_6_switch.cpp  main_gruppe_6_switch_2.cpp  main_line.cpp  main_move_collision.cpp  main_queue.cpp  stop_robot.cpp  swarm_robot_control.cpp
src/gazebo_swarm_robot_pkgs/gazebo_swarm_robot_tb3/worlds/: empty.world
